--- a/EduHome/EduHome/Views/Shared/_Layout.cshtml
+++ b/EduHome/EduHome/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
                     <div class="col-md-8 col-sm-8 col-xs-12">
                         <div class="header-top-left">
                             <p>@_context.Settings.FirstOrDefault().Phone1</p>
+                         
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12">
@@ -159,14 +160,14 @@
                             <p>@_context.Settings.FirstOrDefault().Content</p>
                             <div class="footer-social">
                                 <ul>
-                                    @*@foreach (var item in Model.Socials)
+                                    @foreach (var item in _context.Socials)
                                     {
-                                    <li><a href="#">@item.Icon</a></li>
-                                    }*@
+                                        <li><a href="#"><i class="@item.Icon"></i></a></li>
+                                    }
                                     @*<li><a href="#"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-twitter"></i></a></li>*@
+                                      <li><a href="#"><i class="zmdi zmdi-pinterest"></i></a></li>
+                                      <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
+                                      <li><a href="#"><i class="zmdi zmdi-twitter"></i></a></li>*@
                                 </ul>
                             </div>
                         </div>
